style: use display inline for toc bullet points

--- a/src/components/TableOfContentsHeading.astro
+++ b/src/components/TableOfContentsHeading.astro
@@ -5,6 +5,12 @@ import type { Heading } from './TableOfContents.astro'
 const { heading } = Astro.props
 ---
 
+<style>
+  .toc-link {
+    display: inline;
+  }
+</style>
+
 <li
   class="list-inside list-disc px-4 py-1.5 text-sm text-foreground/60 xl:list-none xl:p-0"
 >
