--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -98,7 +98,7 @@ const prevPost = getPrevPost(currentPostSlug);
     }
     <section class="col-start-2 flex flex-col gap-y-6 text-center">
       <div class="flex flex-col gap-y-4">
-        <h1 class="text-5xl font-black leading-tight sm:text-6xl">
+        <h1 class="text-5xl font-black leading-none sm:text-6xl">
           {post.data.title}
         </h1>
 
