--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -88,42 +88,48 @@
     h1 {
       font-size: 3em !important;
       font-weight: 900 !important; 
-      margin-bottom: 1em !important;
+      margin-top: 0.35em !important;
+      margin-bottom: 0.35em !important;
       line-height: 1.0 !important;
     }
 
     h2 {
       font-size: 2.65em !important;
       font-weight: 825 !important;
-      margin-bottom: 1em !important;
+      margin-top: 0.35em !important;
+      margin-bottom: 0.35em !important;
       line-height: 1.0 !important;
     }
 
     h3 {
       font-size: 2.25em !important;
       font-weight: 775 !important;
-      margin-bottom: 1em !important;
+      margin-top: 0.35em !important;
+      margin-bottom: 0.35em !important;
       line-height: 1.0 !important;
     }
 
     h4 {
       font-size: 2em !important;
       font-weight: 700 !important;
-      margin-bottom: 1em !important;
+      margin-top: 0.35em !important;
+      margin-bottom: 0.35em !important;
       line-height: 1.0 !important;
     }
 
     h5 {
       font-size: 1.75em !important;
       font-weight: 650 !important;
-      margin-bottom: 1em !important;
+      margin-top: 0.35em !important;
+      margin-bottom: 0.35em !important;
       line-height: 1.0 !important;
     }
 
     h6 {
       font-size: 1.45em !important;
       font-weight: 600 !important;
-      margin-bottom: 1em !important;
+      margin-top: 0.35em !important;
+      margin-bottom: 0.35em !important;
       line-height: 1.0 !important;
     }
 
@@ -132,9 +138,9 @@
       line-height: 1.4 !important;
     }
 
-    ol p {
+    /* ol p {
       font-size: 1em !important;
-    }    
+    }     */
 
     img {
       border-radius: 0.75em;
